# rv

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  bacon.toml  dist-workspace.toml  ramdisk.sh
crates/dep-graph/: Cargo.toml
crates/dep-graph/benches/: dep_graph.rs
crates/dep-graph/src/: graph.rs  graph_par.rs  lib.rs
crates/rv/: Cargo.toml
crates/rv-cache/: Cargo.toml  README.md
crates/rv-cache/src/: cache_key.rs  cli.rs  lib.rs  removal.rs  timestamp.rs
crates/rv-client/: Cargo.toml
crates/rv-client/src/: http_client.rs  lib.rs  registry_client.rs  tls.rs
crates/rv-client/tests/integration_tests/: http_util.rs  main.rs  ssl_certs.rs
crates/rv-dirs/: Cargo.toml
crates/rv-dirs/src/: lib.rs
crates/rv-gem-package/: Cargo.toml  README.md
crates/rv-gem-package/examples/: README.md  verify_gems.rs
crates/rv-gem-package/src/: checksum.rs  entry.rs  error.rs  lib.rs  package.rs  source.rs
crates/rv-gem-package/tests/: error_cases.rs  integration_tests.rs
crates/rv-gem-package/tests/fixtures/: alba-3.10.0.gem  checksums-gem-1.0.0.gem  indirect-1.1.0.gem  indirect-1.2.0.gem  old-format.gem  rake-ext-fails-0.1.gem  rake-ext-test-1.0.0.gem  symlink-test-1.0.0.gem  test-gem-1.0.0.gem
crates/rv-gem-specification-yaml/: Cargo.toml  README.md
crates/rv-gem-specification-yaml/benches/: bench_parser.rs  my_bench.rs
crates/rv-gem-specification-yaml/examples/: parse_gem_spec.rs
crates/rv-gem-specification-yaml/src/: lib.rs  parser.rs  serialize.rs  to_ruby.rs
crates/rv-gem-specification-yaml/src/parser/: error.rs
crates/rv-gem-specification-yaml/tests/: malformed_yaml.rs  round_trip.rs  yaml_compatibility.rs
crates/rv-gem-specification-yaml/tests/fixtures/: bacon-1.2.0.gemspec.yaml  code_ownership-2.1.0.gemspec.yaml  complex_spec.yaml  comprehensive_features.yaml  creole-0.5.0.gemspec.yaml  dm-do-adapter-1.2.0.gemspec.yaml  dm-postgres-adapter-1.2.0.gemspec.yaml  edge_case_spec.yaml  ffi-1.17.3.gemspec.yaml  ffi-compiler-1.3.2.gemspec.yaml  folded_scalar_syntax.yaml  licensed_spec.yaml  llhttp-ffi-0.4.0.gemspec.yaml  lz4-0.3.3.gemspec.yaml  minimal_spec.yaml  mocha-on-bacon-0.2.2.gemspec.yaml  net-http-pipeline-1.0.1.gemspec.yaml  null_authors_email.yaml  old_dependency_format.yaml  postgres-0.8.1.gemspec.yaml  prerelease_spec.yaml  proxies-0.2.1.gemspec.yaml  rake-13.3.1.gemspec.yaml  requirement_with_none.yaml  rest-client-1.6.7.gemspec.yaml  ronn-0.7.3.gemspec.yaml  simple_spec.yaml  sinatra-1.0.gemspec.yaml  terminal-table-1.4.5.gemspec.yaml  version_constraints_spec.yaml  version_requirement_class.yaml  version_with_extras.yaml  yaml_anchors_and_prerelease.yaml
crates/rv-gem-specification-yaml/tests/snapshots/: round_trip__round_trip_complex_generated.snap  round_trip__round_trip_complex_original.snap  round_trip__round_trip_edge_case_generated.snap  round_trip__round_trip_edge_case_original.snap  round_trip__round_trip_licensed_generated.snap  round_trip__round_trip_licensed_original.snap  round_trip__round_trip_minimal_generated.snap  round_trip__round_trip_minimal_original.snap  round_trip__round_trip_prerelease_generated.snap  round_trip__round_trip_prerelease_original.snap  round_trip__round_trip_simple_generated.snap  round_trip__round_trip_simple_original.snap  round_trip__round_trip_version_constraints_generated.snap  round_trip__round_trip_version_constraints_original.snap  yaml_compatibility__complex_spec_parsed.snap  yaml_compatibility__comprehensive_features_spec_parsed.snap  yaml_compatibility__edge_case_spec_parsed.snap  yaml_compatibility__licensed_spec_parsed.snap  yaml_compatibility__minimal_spec_parsed.snap  yaml_compatibility__null_authors_email_spec_parsed.snap  yaml_compatibility__old_dependency_format_spec_parsed.snap  yaml_compatibility__prerelease_spec_parsed.snap  yaml_compatibility__requirement_with_none_spec_parsed.snap  yaml_compatibility__simple_spec_parsed.snap  yaml_compatibility__version_constraints_spec_parsed.snap  yaml_compatibility__version_with_extras_spec_parsed.snap
crates/rv-gem-specification-yaml/tests/yaml-to-ruby/: abbrev.gemspec  abbrev.yaml  base64.gemspec  base64.yaml  benchmark.gemspec  benchmark.yaml  bigdecimal.gemspec  bigdecimal.yaml  bootsnap.gemspec  bootsnap.yaml  bundler.gemspec  bundler.yaml  concurrent-ruby.gemspec  concurrent-ruby.yaml  css-minify.gemspec  css-minify.yaml  csv.gemspec  csv.yaml  date.gemspec  date.yaml  debug.gemspec  debug.yaml  delegate.gemspec  delegate.yaml  did_you_mean.gemspec  did_you_mean.yaml  digest.gemspec  digest.yaml  drb.gemspec  drb.yaml  english.gemspec  english.yaml  erb.gemspec  erb.yaml  error_highlight.gemspec  error_highlight.yaml  etc.gemspec  etc.yaml  fcntl.gemspec  fcntl.yaml  (+139 more)
crates/rv-gem-types/: Cargo.toml
crates/rv-gem-types/src/: dependency.rs  lib.rs  name_tuple.rs  platform.rs  project_dependency.rs  release_tuple.rs  requirement.rs  specification.rs  version.rs  version_platform.rs
crates/rv-lockfile/: Cargo.toml
crates/rv-lockfile/benches/: bench_parse.rs  my_bench.rs
crates/rv-lockfile/src/: datatypes.rs  error.rs  lib.rs  parser.rs  tests.rs
crates/rv-lockfile/src/snapshots/: rv_gem_lockfile__tests__parse_file.snap  (+18 more)
crates/rv-lockfile/tests/: complex_lockfile_tests.rs  lockfile_fixtures_tests.rs  lockfile_parsing_tests.rs
crates/rv-ruby/: Cargo.toml
crates/rv-ruby/benches/: my_bench.rs
crates/rv-ruby/src/: canonical_name.rs  engine.rs  implementation.rs  lib.rs  request.rs  tool_consumable.rs  version.rs  version_request.rs
crates/rv-version/: Cargo.toml
crates/rv-version/benches/: cmp.rs
crates/rv-version/src/: lib.rs
crates/rv/scripts/: serialize_gemfile.rb
crates/rv/src/: commands.rs  config.rs  dirs.rs  gemserver.rs  http_client.rs  main.rs  progress.rs  resolver.rs  ruby.rs  ruby_eol.rs  script_metadata.rs  tar_utils.rs  update.rs  utils.rs
crates/rv/testdata/: all_nokogiri_transitive_deps.json  all_rails_versions
crates/rvx/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_gem_spec_yaml.rs
(+369 files in other folders)
