[workspace]
members = [
  "crates/rv",
  "crates/rv-cache",
  "crates/rv-dirs",
  "crates/rv-lockfile",
  "crates/rv-gem-package",
  "crates/rv-gem-specification-yaml",
  "crates/rv-gem-types",
  "crates/rv-platform",
  "crates/rv-ruby",
  "crates/rv-version",
  "fuzz",
]
resolver = "2"

[workspace.dependencies]
# External dependencies
anstream = "0.6.19"
assert_fs = "1.1.3"
bytesize = "2.3.0"
camino = "1.2.2"
camino-tempfile-ext = "0.3.3"
clap = "4.5.41"
clap_derive = "4.5.41"
clap-verbosity-flag = "3.0.4"
criterion = "0.8.1"
current_platform = "0.2.0"
dunce = "1"
etcetera = "0.11.0"
flate2 = "1.1.8"
fs-err = "3.2.2"
futures-util = "0.3.31"
indexmap = "2.0"
indicatif = "0.18.0"
indoc = "2.0.7"
insta = "1.44"
miette = "7.6.0"
once_cell = "1.20.1"
owo-colors = "4.1.0"
pretty_assertions = "1.4.1"
rayon = "1.11.0"
rayon-tracing = { git = "https://github.com/danylaporte/rayon-tracing", version = "0.1.1", rev = "v0.1.1" }
regex = "1.11.1"
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "http2",
] }
saphyr = "0.0.6"
saphyr-parser = "0.0.6"
seahash = "4.1.0"
serde = "1.0.219"
serde_json = "1.0"
serde_with = { version = "3.16.0", default-features = false, features = [
  "macros",
] }
sevenz-rust2 = "0.20.1"
sha1 = "0.10"
sha2 = "0.10"
shell-escape = "0.1.5"
shellexpand = "3.1"
tar = "0.4.44"
tempfile = "3.23"
zip = "7.1.0"
thiserror = "2.0.17"
tokio = "1.46.1"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-oslog = "0.3.0"
tracing-subscriber = "0.3.22"
winnow = "0.6"
rv-cache = { version = "0.1.0", path = "crates/rv-cache" }
rv-dirs = { version = "0.1.0", path = "crates/rv-dirs" }
rv-lockfile = { version = "0.1.0", path = "crates/rv-lockfile" }
rv-gem-specification-yaml = { version = "0.1.0", path = "crates/rv-gem-specification-yaml" }
rv-gem-types = { version = "0.1.0", path = "crates/rv-gem-types" }
rv-platform = { version = "0.1.0", path = "crates/rv-platform" }
rv-ruby = { version = "0.1.0", path = "crates/rv-ruby" }
rv-version = { version = "0.1.0", path = "crates/rv-version" }
dep-graph = { version = "0.2.1-rv", path = "crates/dep-graph" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true

# The profile that benchmarks, and `cargo-flamegraph` will build with
[profile.bench]
debug = true

[workspace.lints.clippy]
dbg_macro = "warn"
redundant_clone = "warn"
result_large_err = "allow"
