[package]
name = "dep-graph"
version = "0.2.0-rv"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmoutschen/dep-graph"
description = "Dependency graph resolver library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["rayon", "crossbeam-channel"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "dep_graph"
harness = false

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }
rayon = { workspace = true, optional = true }
num_cpus = "1.13"
