[package]
name = "rv-client"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = { version = "0.13" }
current_platform = { workspace = true }
reqwest = { workspace = true }
owo-colors = { workspace = true }
fs-err = { workspace = true }
tracing = { workspace = true }
rustls-pki-types = { version = "1.12.0" }
rustls-native-certs = { version = "0.8.3" }
webpki-root-certs = { version = "1" }

[dev-dependencies]
rcgen = "0.14.7"
anyhow = "1"
temp-env = { version = "0.3.6", features = ["async_closure"] }
http-body-util = "0.1"
hyper = "1.9.0"
hyper-util = "0.1.20"
rustls = "0.23"
futures = "0.3.32"
tokio-rustls = "0.26.4"
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
