[package]
name = "rv-dirs"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { workspace = true }
etcetera = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
fs-err = { workspace = true }
indoc = { workspace = true }

[lints]
workspace = true
