[package]
name = "rv-gem-package"
version = "0.1.0"
edition = "2021"

[dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
rv-gem-types = { workspace = true }
rv-gem-specification-yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
saphyr = { workspace = true }

[[example]]
name = "verify_gems"
path = "examples/verify_gems.rs"

[dev-dependencies]
insta = { workspace = true }
