[package]
name = "rv-gem-specification-yaml"
version = "0.1.0"
edition = "2024"
description = "YAML serialization/deserialization for Gem::Specification with Ruby compatibility"
repository = "https://github.com/spinel-sh/rv"

[dependencies]
rv-gem-types = { workspace = true }
saphyr = { workspace = true }
saphyr-parser = { workspace = true }
winnow = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true, features = ["unstable"] }
miette = { workspace = true, features = ["fancy"] }

[[example]]
name = "parse_gem_spec"

[[bench]]
name = "bench_parser"
harness = false

[lints]
workspace = true
