[package]
name = "rv-gem-types"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { workspace = true }
either = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
rv-version = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
