[package]
name = "rv-gem-types"
version = "0.1.0"
edition = "2024"

[dependencies]
current_platform = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
rv-platform = { workspace = true }
rv-version = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
