[package]
name = "rv-gem-types"
version = "0.1.0"
edition = "2024"

[dependencies]
current_platform = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
pubgrub = { workspace = true }
rv-platform = { workspace = true }
rv-version = { workspace = true }
rv-ruby = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
