[package]
name = "rv-lockfile"
version = "0.1.0"
edition = "2024"
description = "Parses Gemfile.lock files"

[dependencies]
thiserror = { workspace = true }
rv-version = { workspace = true }
rv-ruby = { workspace = true }
miette = { workspace = true }
winnow = { workspace = true }
hex = "0.4.3"
line-ending = "1.5"
rv-gem-types = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
criterion = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tempfile = { workspace = true }

[[bench]]
name = "bench_parse"
harness = false

[lints]
workspace = true
