[package]
name = "rv-ruby"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_fs = "1.1.3"
camino = { version = "1.1.11", features = ["serde", "serde1"] }
regex = "1.11.1"
rv-cache = { version = "0.1.0", path = "../rv-cache" }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
thiserror = "2.0.12"
tracing = "0.1.41"
