[package]
name = "rv-ruby"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_fs = { workspace = true }
camino = { workspace = true, features = ["serde", "serde1"] }
regex = { workspace = true }
rv-cache = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
