[package]
name = "rv-ruby"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = { workspace = true, features = ["serde", "serde1"] }
rv-cache = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "my_bench"
harness = false
