[package]
name = "rv-version"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }

[[bench]]
name = "cmp"
harness = false

[lints]
workspace = true
