[package]
name = "rv"
version = "0.4.3"
rust-version = "1.90.0"
edition = "2024"
repository = "https://github.com/spinel-coop/rv"
description = "Ruby version management, but fast"
homepage = "https://spinel.coop/rv"
default-run = "rv"

[dependencies]
rv-core = { workspace = true }
anstream = { workspace = true }
tokio = { workspace = true, features = [
  "tracing",
  "macros",
  "rt-multi-thread",
  "io-std",
  "process",
  "fs",
] }
miette = { workspace = true, features = ["fancy"] }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
assert_fs = { workspace = true }
fs-err = { workspace = true }
camino-tempfile-ext = { workspace = true }
mockito = "1.4.0"
pretty_assertions = { workspace = true }
rexpect = "0.6.2"

[lints]
workspace = true
