[package]
name = "rvx"
version = "0.4.3"
rust-version = "1.90.0"
edition = "2024"
repository = "https://github.com/spinel-coop/rv"
description = "Run Ruby gems as executables"
homepage = "https://spinel.coop/rv"

[dependencies]
rv-core = { workspace = true }
anstream = { workspace = true }
tokio = { workspace = true, features = [
  "tracing",
  "macros",
  "rt-multi-thread",
  "io-std",
  "process",
  "fs",
] }
miette = { workspace = true, features = ["fancy"] }


[lints]
workspace = true
